--- a/index.html
+++ b/index.html
@@ -217,26 +217,26 @@
             <div class="content">
               <ul><li class="title is-6">Results in Table 2 (main paper)</li></ul>
               <p class="has-text-centered">
-                <img src="static/images/T1.png" alt="Quantitative Comparison Table">
+                <img src="static/images/T1.png" >
               </p>
             </div>
           </details>
           <details>
             <summary class="title is-5">Visual Comparisons (click to expand)</summary>
             <div class="content">
-              <ul><li class="title is-6">Results in Figure 5 (main paper)</li></ul>
+              <ul><li class="title is-6">Results in Figure 8 (main paper)</li></ul>
               <p class="has-text-centered">
-                <img src="static/images/F1.png" alt="Visual Comparison Figure 8">
+                <img src="static/images/F1.png" >
+              </p>
+              <ul><li class="title is-6">Results in Figure 5 (supplemental material)</li></ul>
+              <p class="has-text-centered">
+                <img src="static/images/F2-1.png" >
+                <img src="static/images/F2-2.png" >
               </p>
               <ul><li class="title is-6">Results in Figure 6 (supplemental material)</li></ul>
               <p class="has-text-centered">
-                <img src="static/images/F2-1.png" alt="Visual Comparison Figure 13-1">
-                <img src="static/images/F2-2.png" alt="Visual Comparison Figure 13-2">
-              </p>
-              <ul><li class="title is-6">Results in Figure 14 (supplemental material)</li></ul>
-              <p class="has-text-centered">
-                <img src="static/images/F3-1.png" alt="Visual Comparison Figure 14-1">
-                <img src="static/images/F3-2.png" alt="Visual Comparison Figure 14-2">
+                <img src="static/images/F3-1.png" >
+                <img src="static/images/F3-2.png" >
               </p>
             </div>
           </details>
