--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <sup>3</sup>Max Planck Institute for Informatics,
                 <sup>4</sup>Westlake University
               </span>
-              <span class="eql-cntrb">
+              <span class="coorespond">
                 <small><br><sup>*</sup>Indicates Corresponding Authors</small>
               </span>
             </div>
