--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/zhengchen1999/BI-DiffSR?tab=readme-ov-file" target="_blank"
+                  <a href="https://github.com/zhengchen1999/BI-DiffSR" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fab fa-github"></i>
